Adicionei um paragrafo

--- a/siteExemplo/index.html
+++ b/siteExemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1> 
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci consequatur saepe dolores veniam at, molestiae quae tenetur! Veniam, dolore eligendi eaque maxime commodi, esse, pariatur necessitatibus voluptates exercitationem quaerat similique?</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab quaerat odio vitae at provident nesciunt culpa a! Voluptatem rem itaque fugit at animi error quod molestias dolores, rerum blanditiis quaerat!</p>
 </body>
 </html>
